--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -4,11 +4,11 @@
 }
 
 .y-hero-img {
-  @include media-breakpoint-only(md) {
+  @include media-breakpoint-between(md, xl) {
     margin-top: 46px;
   }
 
-  @include media-breakpoint-down(sm) {
+  @include media-breakpoint-down(md) {
     margin-top: 40px;
   }
 }
@@ -19,7 +19,7 @@
   line-height: 1.15625;
   letter-spacing: -0.03em;
 
-  @include media-breakpoint-down(sm) {
+  @include media-breakpoint-down(md) {
     font-size: 44px;
     line-height: 1.09091;
   }
@@ -37,18 +37,18 @@
   width: 7rem;
   text-align: center;
 
-  @include media-breakpoint-down(sm) {
+  @include media-breakpoint-down(md) {
     display: none;
   }
 }
 
-@include media-breakpoint-down(sm) {
+@include media-breakpoint-down(md) {
   .y-hero-handmade-col {
     display: none;
   }
 }
 
-@include media-breakpoint-only(md) {
+@include media-breakpoint-between(md, xl) {
   .y-hero .row {
     align-items: flex-start;
   }
@@ -71,8 +71,11 @@
 .y-hero-btn {
   margin-left: 11.3125rem;
 
-  @include media-breakpoint-down(sm) {
+  @include media-breakpoint-down(xl) {
     margin-left: 0;
+  }
+
+  @include media-breakpoint-down(md) {
     font-size: 14px;
     padding: 15px;
   }
