--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -26,7 +26,7 @@
     gap: $spacer * 0.75; // 12px
   }
 
-  @include media-breakpoint-down(lg) {
+  @include media-breakpoint-down(xl) {
     .navbar-brand {
       margin-inline-end: 0;
     }
