--- a/src/styles/layout/_order.scss
+++ b/src/styles/layout/_order.scss
@@ -5,7 +5,7 @@
     background-position: left bottom;
   }
 
-  @include media-breakpoint-only(md) {
+  @include media-breakpoint-between(md, xl) {
     background-size: 30% auto;
   }
 }
@@ -13,15 +13,15 @@
 .y-order form {
   margin-bottom: $order-btn-gap;
 
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(xl) {
     height: $order-form-height;
   }
 
-  @include media-breakpoint-down(lg) {
+  @include media-breakpoint-down(xl) {
     height: auto;
   }
 
-  @include media-breakpoint-only(md) {
+  @include media-breakpoint-between(md, xl) {
     margin-bottom: 100px;
   }
 }
@@ -39,7 +39,7 @@
 .y-order-form {
   max-width: 30rem;
 
-  @include media-breakpoint-only(md) {
+  @include media-breakpoint-between(md, xl) {
     > .mb-3:last-of-type {
       margin-bottom: 0 !important;
     }
@@ -51,11 +51,11 @@
 }
 
 .y-order-layout {
-  @include media-breakpoint-down(lg) {
+  @include media-breakpoint-down(xl) {
     flex-direction: column;
   }
 
-  @include media-breakpoint-only(md) {
+  @include media-breakpoint-between(md, xl) {
     > div:first-child {
       order: 2;
       width: 100%;
@@ -72,7 +72,7 @@
 .y-order-gap {
   width: 3.125rem;
 
-  @include media-breakpoint-down(lg) {
+  @include media-breakpoint-down(xl) {
     display: none;
   }
 }
@@ -88,7 +88,7 @@
     width: 36.75rem;
   }
 
-  @include media-breakpoint-only(md) {
+  @include media-breakpoint-between(md, xl) {
     width: 44rem; // 704px
     max-width: 100%;
     height: 32.5625rem; // 521px
@@ -99,7 +99,7 @@
   }
 }
 
-@media (max-width: 576px) {
+@include media-breakpoint-down(md) {
   .y-order form {
     margin-bottom: 0;
   }
