--- a/src/styles/layout/_our-collection.scss
+++ b/src/styles/layout/_our-collection.scss
@@ -36,7 +36,7 @@
     margin-bottom: 0.5rem;
 }
 
-@media (max-width: 576px) {
+@include media-breakpoint-down(md) {
     .y-our-collection-heading {
         font-size: 32px;
         line-height: 1.375;
