--- a/src/styles/layout/_testimonials.scss
+++ b/src/styles/layout/_testimonials.scss
@@ -37,7 +37,7 @@
    margin-bottom: 0;
 }
 
-@include media-breakpoint-only(md) {
+@include media-breakpoint-between(md, xl) {
   .y-testimonials .row {
     justify-content: center;
     gap: 32px;
@@ -56,7 +56,7 @@
   }
 }
 
-@media (max-width: 576px) {
+@include media-breakpoint-down(md) {
   .y-testimonials .row {
     justify-content: center;
   }
